kubernetes/applications/vaultwarden/kubernetes-01/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vaultwarden-entrance
spec:
  hostnames:
    - vaultwarden.tools.internal.place
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: gateway-api-extra-gateway-production
      namespace: istio
      sectionName: https-terminate
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: vaultwarden
          port: 8010
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
