kubernetes/applications/vaultwarden/kubernetes-01/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vaultwarden
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: &host "vaultwarden.tools.internal.place"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vaultwarden
                port:
                  number: 8010
  tls:
    - hosts:
        - *host
      secretName: vaultwarden-tls
